Polish frontend app usability
